gateway-api-stuff.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
spec:
  parentRefs:
  - name: my-gateway
  hostnames:
  - "*.net"
  rules:
  - matches:
    - path:
        value: /
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: my-header
                value: foo
        - type: URLRewrite
          urlRewrite:
            # hostname: elsewhere.example
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /newpath
    backendRefs:
    - name: dummy-v1-pink
      port: 3000
